# aio

./: .bazelrc  .gitignore  README.md  WORKSPACE
aio/base/: BUILD.bazel  elapsed_timer.h  exception.h  float.h  schema.h
aio/reader/: BUILD.bazel  csv_reader.cc  csv_reader.h  mmapped_file.cc  mmapped_file.h  reader.h
aio/stream/: BUILD.bazel  file_io.cc  file_io.h  interface.h  mem_io.cc  mem_io.h  test.cc
aio/test/: BUILD.bazel  csv_test.cc  rw_test.cc
aio/test/data/: BUILD.bazel
aio/writer/: BUILD.bazel  csv_writer.cc  csv_writer.h  writer.h
bazel/: BUILD.bazel  aio.bzl  fmtlib.BUILD  repositories.bzl  spdlog.BUILD
