
# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


load("//bazel:aio.bzl", "aio_cc_library")

package(default_visibility = ["//visibility:public"])

aio_cc_library(
    name = "exception",
    hdrs = [
        "exception.h",
    ],
    deps = [
        "@com_github_fmtlib_fmt//:fmtlib",
        "@com_google_absl//absl/debugging:stacktrace",
        "@com_google_absl//absl/debugging:symbolize",
    ],
)

aio_cc_library(
    name = "float",
    hdrs = ["float.h"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_absl//absl/strings"],
)

aio_cc_library(
    name = "schema",
    hdrs = ["schema.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":exception",
    ],
)

aio_cc_library(
    name = "elapsed_timer",
    hdrs = ["elapsed_timer.h"],
)
