
# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


load("//bazel:aio.bzl", "aio_cc_library")

aio_cc_library(
    name = "reader",
    visibility = ["//visibility:public"],
    deps = [
        ":csv_reader",
    ],
)

aio_cc_library(
    name = "interface",
    hdrs = ["reader.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//aio/base:schema",
        "//aio/stream:interface",
    ],
)

aio_cc_library(
    name = "csv_reader",
    srcs = ["csv_reader.cc"],
    hdrs = ["csv_reader.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":interface",
        ":mmapped_file",
        "//aio/base:exception",
        "//aio/base:float",
        "//aio/stream",
        "@com_github_fmtlib_fmt//:fmtlib",
        "@com_google_absl//absl/strings",
    ],
)

aio_cc_library(
    name = "mmapped_file",
    srcs = ["mmapped_file.cc"],
    hdrs = ["mmapped_file.h"],
    deps = [
        "//aio/base:exception",
        "@com_google_absl//absl/base:malloc_internal",
        "@com_google_absl//absl/cleanup",
    ],
)
