
# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


load("//bazel:aio.bzl", "aio_cc_test")

aio_cc_test(
    name = "csv_test",
    srcs = ["csv_test.cc"],
    deps = [
        "//aio/reader",
        "//aio/writer",
    ],
)

aio_cc_test(
    name = "rw_test",
    srcs = ["rw_test.cc"],
    data = [
        "//aio/test/data:perfect_logit",
    ],
    deps = [
        "//aio/base:elapsed_timer",
        "//aio/reader",
        "//aio/writer",
        "@com_github_gflags_gflags//:gflags",
        "@com_google_absl//absl/strings",
    ],
)
