
# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


load("//bazel:aio.bzl", "aio_cc_library")

aio_cc_library(
    name = "writer",
    visibility = ["//visibility:public"],
    deps = [
        ":csv_writer",
    ],
)

aio_cc_library(
    name = "interface",
    hdrs = ["writer.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//aio/base:schema",
        "//aio/stream:interface",
    ],
)

aio_cc_library(
    name = "csv_writer",
    srcs = ["csv_writer.cc"],
    hdrs = ["csv_writer.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":interface",
        "//aio/base:exception",
        "//aio/base:float",
        "//aio/stream",
        "@com_github_fmtlib_fmt//:fmtlib",
    ],
)
